--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
 				</section>
 				<section>
 					<h3>Performance</h3>
+					<p style="font-size: 24px;">Time (Y axis) vs Number of tests (X axis)</p>
 					<canvas data-chart="line" class="stretch">
 						<!--
                         {
