--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 						Welcome to our presentation on the Cakephp Fixture Factories <br>
 						This work is presented to you by Nicolas Masson and myself, Juan-Pablo Ramirez <br>
                         Both have long years experience in CakePHP 3.x and 4.x
+
+
 					</aside>
 				</section>
 				<section>
@@ -58,7 +60,10 @@
                         <h4>CakePHP Fixture Factories are dynamic</h4>
                         <aside class="notes">
                             CakePHP fixtures are static, they are hard coded and shared across all tests, once loaded.
-                            CakePHP Fixture Factories are dynamic. You create what you need inside your test.
+
+                            Nicolas Masson came with the idea to create fixture factories in order to generate
+                            test fixtures dynamically. You create what you need inside your test.
+                            The first version proposed by Nico got developed and maintained by Juan Pablo.
                             I will explain in a simple example what this all means.
                         </aside>
                     </section>
