--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 						This work is presented to you by Nicolas Masson and myself, Juan-Pablo Ramirez <br>
                         Both have long years experience in CakePHP 3.x and 4.x
 					</aside>
-					<img data-src="assets/vierge-noire.jpg" height="400px" alt="Nico and Juan Pablo"/>
+					<img data-src="assets/vierge-noire.jpg" height="400px" alt=""/>
 
 				</section>
 				<section>
 					<section>
 						<h4>Static Test Fixtures are not fun</h4>
-						<img class="fragment fade-down" height="400px" data-src="assets/pub.jpg" alt="Picture of Nico and Juan Pablo struggling with the static CakePHP fixtures" />
+						<img class="fragment fade-down" height="400px" data-src="assets/pub.jpg" alt="" />
 						<aside class="notes">
 							We stared writing tests within a large project and got trapped by the number of fixtures
 							we had to create for each of them, multiplied by the amount of tables.
