--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 						<img height="80" data-src="assets/chrono.svg" alt="Chrono" class="fragment fade-left">
                         <aside class="notes">
                             This is how the test looks like with the factories.
-							The facot
+							The factory being tight to the UsersTable, it is aware of the associations of the user.
                         </aside>
 					</section>
 					<section>
