--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						This work is presented to you by Nicolas Masson and myself, Juan-Pablo Ramirez <br>
                         Both have long years experience in CakePHP 3.x and 4.x
 					</aside>
-					<img data-src="assets/vierge-noire.jpg" height="400px" alt=""/>
+					<img class="fade-down fragment" data-src="assets/vierge-noire.jpg" height="400px" alt=""/>
 
 				</section>
 				<section>
