--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
 					<h3>CakePHP Fixture Factories</h3>
 					<p>
 						<small>Created by <a href="https://twitter.com/nicopakacuda?lang=en" target="_blank">Nicolas Masson</a> and <a href="https://webrider.de" target="_blank">Juan Pablo Ramirez</a></small>
-					</p>
+                        <br>
+                        <small> Press <b>S</b> for speaker view</small>
+                        <br>
+                        <small><a href="mailto:'vierge.noire.info@gmail.com'">vierge.noire.info@gmail.com</a></small>
+                    <p>
+
+                    </p>
 					<aside class="notes">
 						Welcome to our presentation on the Cakephp Fixture Factories <br>
 						This work is presented to you by Nicolas Masson and myself, Juan-Pablo Ramirez <br>
                         Both have long years experience in CakePHP 3.x and 4.x
 					</aside>
-					<img class="fade-down fragment" data-src="assets/vierge-noire.jpg" height="400px" alt=""/>
+					<img class="fade-down fragment" data-src="assets/vierge-noire.jpg" height="300px" alt=""/>
 
 				</section>
 				<section>
@@ -663,6 +669,10 @@
 						<small>
 							<a href="https://github.com/vierge-noire/vierge-noire.github.io" target="_blank">Go to the presentation</a>
 						</small>
+                        <br>
+                        <small>
+                            <a href="mailto:'vierge.noire.info@gmail.com'">vierge.noire.info@gmail.com</a>
+                        </small>
 					</p>
 					<p class="fragment">
                         Acknowledgements
