--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 						<li>
 							<a href="" class="icon fa-angle-down">Conferences</a>
 							<ul>
-								<li><a href="../presentations/cakefest2020.html" target="_parent">Cake Fest 2020</a></li>
+								<li><a href="presentations/cakefest2020.html" target="_blank">Cake Fest 2020</a></li>
+								<li><a href="presentations/php-conference-2020.html" target="_blank">IPC 2020</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -84,7 +85,7 @@
 					</p>
 					<p>
 						<span class="image right"><img src="images/Chartres.jpg" alt="" /></span>
-						Without pretending to belong to any of these schools of the ancient times, developpes
+						Without pretending to belong to any of these schools of the ancient times, developers
 						at Vierge Noire share an interest in messages left in the past for future generations.
 
 					</p>
@@ -102,6 +103,9 @@
 									An alternative approach of managing test fixtures in a CakePHP application.
 									The main idea is to provide fixture factories in replacement to the fixtures you can find out of the box in CakePHP.
 								</p>
+								<ul class="actions">
+									<li><a href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank" class="button small scrolly">More</a></li>
+								</ul>
 							</section>
 						</div>
 					</div>
