--- a/presentations/cakefest2020.html
+++ b/presentations/cakefest2020.html
@@ -40,7 +40,7 @@
 						This work is presented to you by Nicolas Masson and myself, Juan-Pablo Ramirez <br>
                         Both have long years experience in CakePHP 3.x and 4.x
 					</aside>
-					<img class="fade-down fragment" data-src="assets/vierge-noire.jpg" height="300px" alt=""/>
+					<img class="fade-down fragment" data-src="assets/pablo-et-nico.jpg" height="300px" alt=""/>
 
 				</section>
 				<section>
