--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<a href="" class="icon fa-angle-down">Projects</a>
 							<ul>
 								<li><a href="#cakephp-fixtures">CakePHP Fixture Factories</a></li>
-								<li><a href="#test-db-cleaner">Universal Test DB Cleaner</a></li>
+								<li><a href="#test-database-cleaner">Universal Test DB Cleaner</a></li>
 								<li><a href="#test-migrator">Test Migrator</a></li>
 							</ul>
 						</li>
@@ -105,6 +105,17 @@
 								</p>
 								<ul class="actions">
 									<li><a href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank" class="button small scrolly">More</a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="4u 6u(2) 12u$(3)">
+							<section class="feature fa-github">
+								<h3 id="test-database-cleaner">Test database cleaner</h3>
+								<p>
+									A framework agnostic package to clean dirty tables between each test in a PHPUnit test suite.
+								</p>
+								<ul class="actions">
+									<li><a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank" class="button small scrolly">More</a></li>
 								</ul>
 							</section>
 						</div>
