--- a/presentations/php-conference-2020.html
+++ b/presentations/php-conference-2020.html
@@ -150,14 +150,14 @@
                     <li>
                         Tests overview
                     </li>
-                    <li>
+                    <li class="fragment">
                         <span class="cakephp">CakePHP</span>'s native ORM
                     </li>
                     <li class="fragment">
                         <span class="cakephp">CakePHP</span> Fixture Factories
                     </li>
-                    <li>
-                        Trigger-based DB Cleaner
+                    <li class="fragment">
+                        Trigger-based Database Cleaner
                     </li>
                 </ul>
                 <aside class="notes">
