--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<a href="" class="icon fa-angle-down">Conferences</a>
 							<ul>
 								<li><a href="presentations/cakefest2020.html" target="_blank">Cake Fest 2020</a></li>
+								<li><a href="presentations/cakefest2021.html" target="_blank">Cake Fest 2021</a></li>
 								<li><a href="presentations/php-conference-2020.html" target="_blank">IPC 2020</a></li>
 								<li><a href="presentations/php-benelux-2021.html" target="_blank">PHPBenelux 2021</a></li>
 							</ul>
@@ -215,7 +216,7 @@
 					<li><a href="mailto:'vierge.noire.info@gmail.com'">vierge.noire.info@gmail.com</a></li>
 				</ul>
 				<span class="copyright">
-					&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
+					&copy; Copyright 2021. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
 				</span>
 			</footer>
 
