--- a/presentations/cakefest-2021.html
+++ b/presentations/cakefest-2021.html
@@ -242,6 +242,9 @@
             <section>
                 <p>Meet us on the <a href="https://community.passbolt.com/" target="_blank">Passbolt Community Forum</a></p>
             </section>
+            <section>
+                <p>Check Remy's <a href="https://www.youtube.com/watch?v=xv6paiNn-_8" target="_blank">last year keynote</a></p>
+            </section>
         </section>
         <section>
             <h4>Last year's main achievements</h4>
